// Vitest Snapshot v1

exports[`TabView > renders TabView properly 1`] = `
<div>
  <div
    class="sc-aXZVg jRVSTR"
  >
    <div
      class="sc-gEvEer kgMFwz"
    >
      <a
        class="sc-eqUAAy eDefpR"
      >
        Tab 1
      </a>
      <a
        class="sc-eqUAAy kwaxvA"
      >
        Tab 2
      </a>
      <a
        class="sc-eqUAAy dGIzrw"
        disabled=""
      >
        Tab 3
      </a>
    </div>
    <div
      class="sc-fqkvVR QYlMX"
    >
      <h4>
        Tab Content here
      </h4>
    </div>
  </div>
</div>
`;

exports[`TabView > shouldn't have href when disabled 1`] = `
<div>
  <div
    class="sc-aXZVg jRVSTR"
  >
    <div
      class="sc-gEvEer kgMFwz"
    >
      <a
        class="sc-eqUAAy dGIzrw"
        disabled=""
      >
        Tab 1
      </a>
    </div>
    <div
      class="sc-fqkvVR QYlMX"
    >
      <h4>
        Tab Content here
      </h4>
    </div>
  </div>
</div>
`;
